fix(volume-box): fixes host appearance and disappearance, implements css classes to make a slight delay in the z-index trancision

--- a/src/app/shared/components/volume-box/volume-box.component.scss
+++ b/src/app/shared/components/volume-box/volume-box.component.scss
@@ -1,16 +1,33 @@
 :host {
-  --progress-bar-colour: rgb(255, 153, 0); /* Declares the primary color variable */
-  --background-color: rgb(52, 52, 52); /* Declares the background color variable */
+  --progress-bar-colour: rgb(
+    255,
+    153,
+    0
+  ); /* Declares the primary color variable */
+  --background-color: rgb(
+    52,
+    52,
+    52
+  ); /* Declares the background color variable */
   --shadow-color: rgba(0, 0, 0, 0.3); /* Declares the shadow color variable */
   position: absolute;
   width: 1050px;
   margin-left: 25px;
+  z-index: -10;
+  transition: z-index 0.2s 1s; /* Tardara 0.2s en pasar de isVisible al estado normal y tardara 1s de delay en aplicarse la animación */
+}
+
+:host(.isVisible) {
+  z-index: 0;
+  transition: z-index 0s; /* Tardara 0s en pasar de normal a isVisible */
 }
 
 div {
   height: 150px;
   width: 100%;
-  background-color: var(--background-color); /* Uses the background color variable */
+  background-color: var(
+    --background-color
+  ); /* Uses the background color variable */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,8 +37,6 @@ div {
   transition: transform 0.5s ease-in;
 
   transform: translateY(-200px);
-  z-index: -10;
-
 }
 
 label {
@@ -52,9 +67,7 @@ progress::-moz-progress-bar {
   border-radius: 10px;
 }
 
-
 .isVisible {
   transform: translateY(0px);
   transition: transform 0.5s ease-in;
-  z-index: 0;
 }
